--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html {
 body{
     margin: 0;
     padding: 0;
+    min-width: 320px;
 }
 
 h1 {
@@ -12,8 +13,18 @@ h1 {
 }
 
 .profile {
+    padding:100px;
     display: grid;
-    grid-template-columns: 100%;
-    grid-template-rows: 20px;
+    grid-template-columns:1fr;
+    grid-template-rows: auto;
+    grid-gap:10px;
+}
+form {
+    display: grid;
 }
 
+
+input {
+    border-color: #5c93f1;
+
+}
